[tool.poetry]
name = "configmanager"
version = "1.0.0"
description = "Config Manager Service"
authors = ["Gemini Team <info@gemini-commerce.com>"]
license = "Gemini fair use license"
readme = "README.md"
repository = "https://github.com/Gemini-Commerce/python-client-configmanager"
keywords = ["OpenAPI", "OpenAPI-Generator", "Config Manager Service"]
include = ["configmanager/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
